<?xml version="1.0" encoding="utf-8"?>
<ViewFlipper xmlns:android="http://schemas.android.com/apk/res/android"
    android:id = "@+id/project_views"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <!-- Dashboard -->
 	<LinearLayout
	    android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent">
	    <Button
	        android:id="@+id/project_create_button"
	        android:text="@string/project_new"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:layout_marginTop="50dip" />
	    <Button
	        android:id="@+id/project_list_button"
	        android:text="@string/project_existing" 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal" />
	</LinearLayout>

	<!-- Create Project -->
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent">
	    <EditText
	        android:id="@+id/project_new"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="25dip"
	        android:layout_weight="1" />
	    <Button
	        android:id="@+id/project_create_save_button"
	        android:text="@string/save"
	        android:layout_marginTop="25dip"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" />
        <Button
            android:id="@+id/project_create_back_button"
            android:text="@string/back"
            android:layout_marginTop="25dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
	</LinearLayout>
	
	<!-- Project List -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <TextView
            android:text="@string/project_existing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dip" />
        <Spinner
            android:prompt="@string/project_list_dropdown_prompt"
            android:id="@+id/project_list_dropdown"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
	    <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent">
	        <Button
	            android:id="@+id/project_list_view_button"
	            android:text="@string/view"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:gravity="right" />
	        <Button
	            android:id="@+id/project_list_back_button"
	            android:text="@string/back"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:gravity="right" />
	    </LinearLayout>
    </LinearLayout>
    
    <!-- View Project -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <Button
            android:text="@string/app_name_photo"
            android:onClick="takePhoto"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="25dip" />
        <Button
            android:text="@string/app_name_audio"
            android:onClick="recordAudio"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="25dip" />
        <Button
            android:text="@string/app_name_video"
            android:onClick="recordVideo"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="25dip" />
    </LinearLayout>
</ViewFlipper>